clusters/_shared_/DISABLED-opa-policy-constraints/psp-host-filesystem_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    #allowedHostPaths:
    #- readOnly: true
    #  pathPrefix: "/foo"
