clusters/_shared_/DISABLED-opa-policy-constraints/psp-host-network-ports_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    hostNetwork: false
    #hostNetwork: true
    #min: 80
    #max: 9000
